--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,81 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       None\n",
-       "1       None\n",
-       "2       None\n",
-       "3       None\n",
-       "4       None\n",
-       "5       None\n",
-       "6       None\n",
-       "7       None\n",
-       "8       None\n",
-       "9       None\n",
-       "10      None\n",
-       "11      None\n",
-       "12      None\n",
-       "13      None\n",
-       "14      None\n",
-       "15      None\n",
-       "16      None\n",
-       "17      None\n",
-       "18      None\n",
-       "19      None\n",
-       "20      None\n",
-       "21      None\n",
-       "22      None\n",
-       "23      None\n",
-       "24      None\n",
-       "25      None\n",
-       "26      None\n",
-       "27      None\n",
-       "28      None\n",
-       "29      None\n",
-       "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#get the probabilies into unigramsDict and bigramsDict\n",
@@ -177,18 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6120\n",
-      "60028\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(unigramDict))\n",
     "print(len(bigramDict))"
@@ -196,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,161 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      score                                               text\n",
-      "0         5  I have bought several of the Vitality canned d...\n",
-      "1         1  Product arrived labeled as Jumbo Salted Peanut...\n",
-      "2         4  This is a confection that has been around a fe...\n",
-      "3         2  If you are looking for the secret ingredient i...\n",
-      "4         5  Great taffy at a great price.  There was a wid...\n",
-      "5         4  I got a wild hair for taffy and ordered this f...\n",
-      "6         5  This saltwater taffy had great flavors and was...\n",
-      "7         5  This taffy is so good.  It is very soft and ch...\n",
-      "8         5  Right now I'm mostly just sprouting this so my...\n",
-      "9         5  This is a very healthy dog food. Good for thei...\n",
-      "10        5  I don't know if it's the cactus or the tequila...\n",
-      "11        5  One of my boys needed to lose some weight and ...\n",
-      "12        1  My cats have been happily eating Felidae Plati...\n",
-      "13        4  good flavor! these came securely packed... the...\n",
-      "14        5  The Strawberry Twizzlers are my guilty pleasur...\n",
-      "15        5  My daughter loves twizzlers and this shipment ...\n",
-      "16        2  I love eating them and they are good for watch...\n",
-      "17        5  I am very satisfied with my Twizzler purchase....\n",
-      "18        5  Twizzlers, Strawberry my childhood favorite ca...\n",
-      "19        5  Candy was delivered very fast and was purchase...\n",
-      "20        5  My husband is a Twizzlers addict.  We've bough...\n",
-      "21        5  I bought these for my husband who is currently...\n",
-      "22        5  I can remember buying this candy as a kid and ...\n",
-      "23        5  I love this candy.  After weight watchers I ha...\n",
-      "24        5  I have lived out of the US for over 7 yrs now,...\n",
-      "25        5  Product received is as advertised.<br /><br />...\n",
-      "26        1  The candy is just red , No flavor . Just  plan...\n",
-      "27        4  I was so glad Amazon carried these batteries. ...\n",
-      "28        5  I got this for my Mum who is not diabetic but ...\n",
-      "29        5  I don't know if it's the cactus or the tequila...\n",
-      "...     ...                                                ...\n",
-      "1970      4  I have had waffles from other mixes that are t...\n",
-      "1971      4  This lands in the gormet category for sure.  H...\n",
-      "1972      4  I'm not normally a big fan of mixes but this i...\n",
-      "1973      4  The pancakes were delicious, but they weren't ...\n",
-      "1974      4  On a whim, I picked up a two-pack of Stonewall...\n",
-      "1975      4  No matter how you mess up the recipe, this Mix...\n",
-      "1976      1  I have an immense love for pancakes.  I have b...\n",
-      "1977      4  Heavily touted by the reviews, decided to try....\n",
-      "1978      1  This expensive pancake mix tastes so processed...\n",
-      "1979      1  Part of me wants to ask for a refund. I bought...\n",
-      "1980      1  This is NOT A SUMMER SAMPLER<br /><br />The ma...\n",
-      "1981      1  Thought I was ordering summer tea flavors, got...\n",
-      "1982      4  As a new Keurig owner, I'm trying as many \"sam...\n",
-      "1983      4  very good price and we love our keurig trying ...\n",
-      "1984      4  I haven't had a chance to try these out yet, b...\n",
-      "1985      4  There are some types I really like--especially...\n",
-      "1986      4  I got this on a special and we are coffee love...\n",
-      "1987      4  This is an excellent product for the non-glute...\n",
-      "1988      4  Not as good as Sesmark Savory Rice Minis, but ...\n",
-      "1989      4  This freeze dried ice cream is great! It taste...\n",
-      "1990      4  My 1 year old son does really like these- andt...\n",
-      "1991      4  My dog thinks he was born into the gentry and ...\n",
-      "1992      4  Watch out for the fat-- 9g of fat per 17g serv...\n",
-      "1993      4  This tea is very good.  I discovered it while ...\n",
-      "1994      4  I love this TEA. It has a very smooth taste an...\n",
-      "1995      4  I found this exact same stuff at the dollar st...\n",
-      "1996      4  I got tired of overpaying for tea at Teavana s...\n",
-      "1997      4  Using the entire sauce packet is over kill, le...\n",
-      "1998      4  This is pretty good stuff. You can't expect a ...\n",
-      "1999      4  \"It tastes better than it looks\" was the first...\n",
-      "\n",
-      "[2000 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       None\n",
-       "1       None\n",
-       "2       None\n",
-       "3       None\n",
-       "4       None\n",
-       "5       None\n",
-       "6       None\n",
-       "7       None\n",
-       "8       None\n",
-       "9       None\n",
-       "10      None\n",
-       "11      None\n",
-       "12      None\n",
-       "13      None\n",
-       "14      None\n",
-       "15      None\n",
-       "16      None\n",
-       "17      None\n",
-       "18      None\n",
-       "19      None\n",
-       "20      None\n",
-       "21      None\n",
-       "22      None\n",
-       "23      None\n",
-       "24      None\n",
-       "25      None\n",
-       "26      None\n",
-       "27      None\n",
-       "28      None\n",
-       "29      None\n",
-       "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get the vector model in data\n",
     "unigramVM = []\n",
@@ -392,8 +168,11 @@
     "    for index in range(len(parsedText)):\n",
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
     "        parsedText[index] = parsedText[index].lower()\n",
-    "        score = unigramDict[parsedText[index]]\n",
-    "        rowVector[parsedText[index]] = score\n",
+    "        #score = unigramDict[parsedText[index]]\n",
+    "        if parsedText[index] in rowVector:\n",
+    "            rowVector[parsedText] +=1\n",
+    "        else:\n",
+    "            rowVector[parsedText] = 1\n",
     "    \n",
     "    if score > 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
