--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import re\n",
-    "from nltk.stem.porter import *"
+    "from nltk.stem.porter import *\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +95,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "#get the probabilies into unigramsDict and bigramsDict\n",
@@ -105,12 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6120\n",
+      "60028\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(unigramDict))\n",
     "print(len(bigramDict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SAVE UNIGRAM/BIGRAM FREQ. INTO A FILE"
    ]
   },
   {
@@ -151,10 +240,89 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# UNIGRAM VECTOR MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get the vector model in data\n",
     "unigramVM = []\n",
@@ -168,13 +336,12 @@
     "    for index in range(len(parsedText)):\n",
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
     "        parsedText[index] = parsedText[index].lower()\n",
-    "        #score = unigramDict[parsedText[index]]\n",
     "        if parsedText[index] in rowVector:\n",
-    "            rowVector[parsedText] +=1\n",
+    "            rowVector[parsedText[index]] +=1\n",
     "        else:\n",
-    "            rowVector[parsedText] = 1\n",
+    "            rowVector[parsedText[index]] = 1\n",
     "    \n",
-    "    if score > 4:\n",
+    "    if score >= 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
     "    else:\n",
     "        rowVector[\"<label>\"] = \"bad\"\n",
@@ -189,12 +356,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SAVE UVM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame(unigramVM).to_csv(\"UnigramVectorModel.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GET TFIDF UNIGRAM MODEL"
    ]
   },
   {
@@ -203,8 +384,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(unigramVM)\n",
-    "len(unigramDict)"
+    "TFIDFVM = []\n",
+    "unigramDF = pd.DataFrame(unigramVM)\n",
+    "def getTFIDFReviewVectors(row):\n",
+    "    \n",
+    "    #we have data,unigrams,bigrams\n",
+    "    rowVector = {}\n",
+    "    text = row[\"text\"]\n",
+    "    score = row[\"score\"]\n",
+    "    parsedText = re.findall(\"(\\w+)\", text)\n",
+    "    for index in range(len(parsedText)):\n",
+    "        parsedText[index] = stemmer.stem(parsedText[index])\n",
+    "        parsedText[index] = parsedText[index].lower()\n",
+    "        TF = unigramDict[parsedText[index]]\n",
+    "        IDF = math.log2()\n",
+    "    \n",
+    "    if score > 4:\n",
+    "        rowVector[\"<label>\"] = \"good\"\n",
+    "    else:\n",
+    "        rowVector[\"<label>\"] = \"bad\"\n",
+    "        \n",
+    "    unigramVM.append(rowVector)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigramDF = pd.DataFrame(unigramVM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unigramDF.drop(\"<label>\", inplace = True)\n"
    ]
   },
   {
@@ -220,18 +440,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
   }
  },
  "nbformat": 4,
