--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,38 +393,143 @@
     "    text = row[\"text\"]\n",
     "    score = row[\"score\"]\n",
     "    parsedText = re.findall(\"(\\w+)\", text)\n",
+    "    numberOfReviews = unigramDF['<label>']\n",
+    "    \n",
     "    for index in range(len(parsedText)):\n",
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
     "        parsedText[index] = parsedText[index].lower()\n",
-    "        TF = unigramDict[parsedText[index]]\n",
-    "        IDF = math.log2()\n",
-    "    \n",
-    "    if score > 4:\n",
+    "        \n",
+    "        if parsedText[index] in rowVector:\n",
+    "            rowVector[parsedText[index]] +=1\n",
+    "        else:\n",
+    "            rowVector[parsedText[index]] = 1\n",
+    "        \n",
+    "    #get individual counts\n",
+    "    for eachWord in rowVector:\n",
+    "        \n",
+    "        TF = rowVector[eachWord]/unigramDict[eachWord]\n",
+    "        IDF = math.log2(len(unigramDF['<label>'])/len(unigramDF.loc[unigramDF[eachWord] > 0]))\n",
+    "\n",
+    "        rowVector[eachWord] = TF*IDF\n",
+    "        \n",
+    "    if score >= 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
     "    else:\n",
     "        rowVector[\"<label>\"] = \"bad\"\n",
     "        \n",
-    "    unigramVM.append(rowVector)\n",
+    "    TFIDFVM.append(rowVector)\n",
     "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "1970    None\n",
+       "1971    None\n",
+       "1972    None\n",
+       "1973    None\n",
+       "1974    None\n",
+       "1975    None\n",
+       "1976    None\n",
+       "1977    None\n",
+       "1978    None\n",
+       "1979    None\n",
+       "1980    None\n",
+       "1981    None\n",
+       "1982    None\n",
+       "1983    None\n",
+       "1984    None\n",
+       "1985    None\n",
+       "1986    None\n",
+       "1987    None\n",
+       "1988    None\n",
+       "1989    None\n",
+       "1990    None\n",
+       "1991    None\n",
+       "1992    None\n",
+       "1993    None\n",
+       "1994    None\n",
+       "1995    None\n",
+       "1996    None\n",
+       "1997    None\n",
+       "1998    None\n",
+       "1999    None\n",
+       "Length: 2000, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unigramDF = pd.DataFrame(unigramVM)"
+    "data.apply(getTFIDFReviewVectors, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(TFIDFVM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unigramDF.drop(\"<label>\", inplace = True)\n"
+    "pd.DataFrame(TFIDFVM).to_csv(\"UniTFIDFModel.csv\", index = False)"
    ]
   },
   {
