--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,81 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       None\n",
-       "1       None\n",
-       "2       None\n",
-       "3       None\n",
-       "4       None\n",
-       "5       None\n",
-       "6       None\n",
-       "7       None\n",
-       "8       None\n",
-       "9       None\n",
-       "10      None\n",
-       "11      None\n",
-       "12      None\n",
-       "13      None\n",
-       "14      None\n",
-       "15      None\n",
-       "16      None\n",
-       "17      None\n",
-       "18      None\n",
-       "19      None\n",
-       "20      None\n",
-       "21      None\n",
-       "22      None\n",
-       "23      None\n",
-       "24      None\n",
-       "25      None\n",
-       "26      None\n",
-       "27      None\n",
-       "28      None\n",
-       "29      None\n",
-       "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#get the probabilies into unigramsDict and bigramsDict\n",
@@ -178,18 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6120\n",
-      "60028\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(unigramDict))\n",
     "print(len(bigramDict))"
@@ -208,12 +127,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export unigrams\n",
+    "'''\n",
     "extractList = []\n",
     "for eachKey in unigramDict:\n",
     "    extractList.append([eachKey,unigramDict[eachKey]])\n",
     "\n",
-    "pd.DataFrame(extractList, columns = [\"word\", \"count\"]).to_csv(\"unigramProbabilities.csv\", index = False)"
+    "pd.DataFrame(extractList, columns = [\"word\", \"count\"]).to_csv(\"unigramProbabilities.csv\", index = False)\n",
+    "'''#export unigrams\n"
    ]
   },
   {
@@ -223,11 +143,13 @@
    "outputs": [],
    "source": [
     "#export bigrams\n",
+    "'''\n",
     "extractList = []\n",
     "for eachKey in bigramDict:\n",
     "    extractList.append([eachKey[0],eachKey[1],bigramDict[eachKey]])\n",
     "    \n",
-    "pd.DataFrame(extractList, columns = [\"first\", \"second\", \"count\"]).to_csv(\"bigramProbabilities.csv\", index = False)"
+    "pd.DataFrame(extractList, columns = [\"first\", \"second\", \"count\"]).to_csv(\"bigramProbabilities.csv\", index = False)\n",
+    "'''"
    ]
   },
   {
@@ -248,81 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       None\n",
-       "1       None\n",
-       "2       None\n",
-       "3       None\n",
-       "4       None\n",
-       "5       None\n",
-       "6       None\n",
-       "7       None\n",
-       "8       None\n",
-       "9       None\n",
-       "10      None\n",
-       "11      None\n",
-       "12      None\n",
-       "13      None\n",
-       "14      None\n",
-       "15      None\n",
-       "16      None\n",
-       "17      None\n",
-       "18      None\n",
-       "19      None\n",
-       "20      None\n",
-       "21      None\n",
-       "22      None\n",
-       "23      None\n",
-       "24      None\n",
-       "25      None\n",
-       "26      None\n",
-       "27      None\n",
-       "28      None\n",
-       "29      None\n",
-       "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get the vector model in data\n",
     "unigramVM = []\n",
@@ -364,11 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(unigramVM).to_csv(\"UnigramVectorModel.csv\", index = False)"
+    "#pd.DataFrame(unigramVM).to_csv(\"UnigramVectorModel.csv\", index = False)"
    ]
   },
   {
@@ -380,12 +230,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make inverted index\n",
+    "invertedIndex = {}\n",
+    "'''\n",
+    "invertedIndex\n",
+    "the => {index : 1}\n",
+    "'''\n",
+    "\n",
+    "def makeInvertedIndex(row):\n",
+    "    #get the bigrams\n",
+    "    #for each bigram -> add a count to the inverted index\n",
+    "    #do not double count\n",
+    "    \n",
+    "    #get bigrams\n",
+    "    text = row[\"text\"]\n",
+    "    parsedText = re.findall(\"(\\w+)\", text)\n",
+    "    \n",
+    "    for index in range(len(parsedText)):\n",
+    "        \n",
+    "        parsedText[index] = stemmer.stem(parsedText[index])\n",
+    "        parsedText[index] = parsedText[index].lower()\n",
+    "        eachWord = parsedText[index]\n",
+    "    \n",
+    "        if eachWord not in invertedIndex:\n",
+    "            invertedIndex[eachWord] = [1, {}]\n",
+    "\n",
+    "        if row.name not in invertedIndex[eachWord]:\n",
+    "            invertedIndex[eachWord][0] += 1\n",
+    "            invertedIndex[eachWord][1][row.name] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.apply(makeInvertedIndex, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "TFIDFVM = []\n",
-    "unigramDF = pd.DataFrame(unigramVM)\n",
     "def getTFIDFReviewVectors(row):\n",
     "    \n",
     "    #we have data,unigrams,bigrams\n",
@@ -393,7 +287,6 @@
     "    text = row[\"text\"]\n",
     "    score = row[\"score\"]\n",
     "    parsedText = re.findall(\"(\\w+)\", text)\n",
-    "    numberOfReviews = unigramDF['<label>']\n",
     "    \n",
     "    for index in range(len(parsedText)):\n",
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
@@ -408,9 +301,18 @@
     "    for eachWord in rowVector:\n",
     "        \n",
     "        TF = rowVector[eachWord]/unigramDict[eachWord]\n",
-    "        IDF = math.log2(len(unigramDF['<label>'])/len(unigramDF.loc[unigramDF[eachWord] > 0]))\n",
-    "\n",
-    "        rowVector[eachWord] = TF*IDF\n",
+    "        \n",
+    "        term = len(invertedIndex[eachWord][1])\n",
+    "        \n",
+    "        \n",
+    "        if term == 0:\n",
+    "            term = 1\n",
+    "            \n",
+    "        IDF = math.log2(2000/term)\n",
+    "            \n",
+    "        if IDF < 0:\n",
+    "            print(eachWord)\n",
+    "            \n",
     "        \n",
     "    if score >= 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
@@ -424,112 +326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       None\n",
-       "1       None\n",
-       "2       None\n",
-       "3       None\n",
-       "4       None\n",
-       "5       None\n",
-       "6       None\n",
-       "7       None\n",
-       "8       None\n",
-       "9       None\n",
-       "10      None\n",
-       "11      None\n",
-       "12      None\n",
-       "13      None\n",
-       "14      None\n",
-       "15      None\n",
-       "16      None\n",
-       "17      None\n",
-       "18      None\n",
-       "19      None\n",
-       "20      None\n",
-       "21      None\n",
-       "22      None\n",
-       "23      None\n",
-       "24      None\n",
-       "25      None\n",
-       "26      None\n",
-       "27      None\n",
-       "28      None\n",
-       "29      None\n",
-       "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "data.apply(getTFIDFReviewVectors, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2000"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(TFIDFVM)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(TFIDFVM).to_csv(\"UniTFIDFModel.csv\", index = False)"
+    "#pd.DataFrame(TFIDFVM).to_csv(\"UniTFIDFModel.csv\", index = False)"
    ]
   },
   {
@@ -545,6 +363,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
