--- a/GetProbabilitesandVM.ipynb
+++ b/GetProbabilitesandVM.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Review_Subset.csv\")"
+    "data = pd.read_csv(\"Reviews_8000.csv\")\n",
+    "numberOfReviews = 8000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,28 +75,29 @@
     "    for index in range(len(ngrams)):\n",
     "        for eachWord in ngrams[index]:\n",
     "            \n",
-    "            if index == 0:\n",
-    "                #unigram\n",
-    "                \n",
-    "                if eachWord in unigramDict:\n",
-    "                    unigramDict[eachWord] +=1\n",
-    "                else:\n",
-    "                    unigramDict[eachWord] =1\n",
-    "                    \n",
-    "            if index == 1:\n",
-    "                #bigram\n",
-    "                    eachWord = tuple(eachWord)\n",
-    "                    if eachWord in bigramDict:\n",
-    "                        bigramDict[eachWord] +=1\n",
+    "            if eachWord != \"br\":\n",
+    "                if index == 0:\n",
+    "                    #unigram\n",
+    "\n",
+    "                    if eachWord in unigramDict:\n",
+    "                        unigramDict[eachWord] +=1\n",
     "                    else:\n",
-    "                        bigramDict[eachWord] =1\n",
+    "                        unigramDict[eachWord] =1\n",
+    "\n",
+    "                if index == 1:\n",
+    "                    #bigram\n",
+    "                        eachWord = tuple(eachWord)\n",
+    "                        if eachWord in bigramDict:\n",
+    "                            bigramDict[eachWord] +=1\n",
+    "                        else:\n",
+    "                            bigramDict[eachWord] =1\n",
     "\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -132,40 +134,40 @@
        "28      None\n",
        "29      None\n",
        "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
+       "7970    None\n",
+       "7971    None\n",
+       "7972    None\n",
+       "7973    None\n",
+       "7974    None\n",
+       "7975    None\n",
+       "7976    None\n",
+       "7977    None\n",
+       "7978    None\n",
+       "7979    None\n",
+       "7980    None\n",
+       "7981    None\n",
+       "7982    None\n",
+       "7983    None\n",
+       "7984    None\n",
+       "7985    None\n",
+       "7986    None\n",
+       "7987    None\n",
+       "7988    None\n",
+       "7989    None\n",
+       "7990    None\n",
+       "7991    None\n",
+       "7992    None\n",
+       "7993    None\n",
+       "7994    None\n",
+       "7995    None\n",
+       "7996    None\n",
+       "7997    None\n",
+       "7998    None\n",
+       "7999    None\n",
+       "Length: 8000, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,72 +179,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6120\n",
-      "60028\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(unigramDict))\n",
-    "print(len(bigramDict))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SAVE UNIGRAM/BIGRAM FREQ. INTO A FILE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "extractList = []\n",
-    "for eachKey in unigramDict:\n",
-    "    extractList.append([eachKey,unigramDict[eachKey]])\n",
-    "\n",
-    "pd.DataFrame(extractList, columns = [\"word\", \"count\"]).to_csv(\"unigramProbabilities.csv\", index = False)\n",
-    "'''#export unigrams\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export bigrams\n",
-    "'''\n",
-    "extractList = []\n",
-    "for eachKey in bigramDict:\n",
-    "    extractList.append([eachKey[0],eachKey[1],bigramDict[eachKey]])\n",
-    "    \n",
-    "pd.DataFrame(extractList, columns = [\"first\", \"second\", \"count\"]).to_csv(\"bigramProbabilities.csv\", index = False)\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(data)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -251,9 +187,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "5       None\n",
+       "6       None\n",
+       "7       None\n",
+       "8       None\n",
+       "9       None\n",
+       "10      None\n",
+       "11      None\n",
+       "12      None\n",
+       "13      None\n",
+       "14      None\n",
+       "15      None\n",
+       "16      None\n",
+       "17      None\n",
+       "18      None\n",
+       "19      None\n",
+       "20      None\n",
+       "21      None\n",
+       "22      None\n",
+       "23      None\n",
+       "24      None\n",
+       "25      None\n",
+       "26      None\n",
+       "27      None\n",
+       "28      None\n",
+       "29      None\n",
+       "        ... \n",
+       "7970    None\n",
+       "7971    None\n",
+       "7972    None\n",
+       "7973    None\n",
+       "7974    None\n",
+       "7975    None\n",
+       "7976    None\n",
+       "7977    None\n",
+       "7978    None\n",
+       "7979    None\n",
+       "7980    None\n",
+       "7981    None\n",
+       "7982    None\n",
+       "7983    None\n",
+       "7984    None\n",
+       "7985    None\n",
+       "7986    None\n",
+       "7987    None\n",
+       "7988    None\n",
+       "7989    None\n",
+       "7990    None\n",
+       "7991    None\n",
+       "7992    None\n",
+       "7993    None\n",
+       "7994    None\n",
+       "7995    None\n",
+       "7996    None\n",
+       "7997    None\n",
+       "7998    None\n",
+       "7999    None\n",
+       "Length: 8000, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get the vector model in data\n",
     "unigramVM = []\n",
@@ -267,11 +275,12 @@
     "    for index in range(len(parsedText)):\n",
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
     "        parsedText[index] = parsedText[index].lower()\n",
-    "        if parsedText[index] in rowVector:\n",
-    "            rowVector[parsedText[index]] +=1\n",
-    "        else:\n",
-    "            rowVector[parsedText[index]] = 1\n",
-    "    \n",
+    "        if parsedText[index] != \"br\":\n",
+    "            if parsedText[index] in rowVector:\n",
+    "                rowVector[parsedText[index]] +=1\n",
+    "            else:\n",
+    "                rowVector[parsedText[index]] = 1\n",
+    "\n",
     "    if score >= 4:\n",
     "        rowVector[\"<label>\"] = \"good\"\n",
     "    else:\n",
@@ -287,19 +296,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# SAVE UVM"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pd.DataFrame(unigramVM).to_csv(\"UnigramVectorModel.csv\", index = False)"
+    "pd.DataFrame(unigramVM).to_csv(\"UnigramVectorModel.csv\", index = False)"
    ]
   },
   {
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -384,40 +386,40 @@
        "28      None\n",
        "29      None\n",
        "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
+       "7970    None\n",
+       "7971    None\n",
+       "7972    None\n",
+       "7973    None\n",
+       "7974    None\n",
+       "7975    None\n",
+       "7976    None\n",
+       "7977    None\n",
+       "7978    None\n",
+       "7979    None\n",
+       "7980    None\n",
+       "7981    None\n",
+       "7982    None\n",
+       "7983    None\n",
+       "7984    None\n",
+       "7985    None\n",
+       "7986    None\n",
+       "7987    None\n",
+       "7988    None\n",
+       "7989    None\n",
+       "7990    None\n",
+       "7991    None\n",
+       "7992    None\n",
+       "7993    None\n",
+       "7994    None\n",
+       "7995    None\n",
+       "7996    None\n",
+       "7997    None\n",
+       "7998    None\n",
+       "7999    None\n",
+       "Length: 8000, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +430,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2233"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(invertedIndex[stemmer.stem(\"good\")][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,11 +467,12 @@
     "        parsedText[index] = stemmer.stem(parsedText[index])\n",
     "        parsedText[index] = parsedText[index].lower()\n",
     "        \n",
-    "        if parsedText[index] in rowVector:\n",
-    "            rowVector[parsedText[index]] +=1\n",
-    "        else:\n",
-    "            rowVector[parsedText[index]] = 1\n",
-    "        \n",
+    "        if parsedText[index] != \"br\":\n",
+    "            if parsedText[index] in rowVector:\n",
+    "                rowVector[parsedText[index]] +=1\n",
+    "            else:\n",
+    "                rowVector[parsedText[index]] = 1\n",
+    "\n",
     "    #get individual counts\n",
     "    for eachWord in rowVector:\n",
     "        \n",
@@ -461,7 +484,7 @@
     "        if term == 0:\n",
     "            term = 1\n",
     "            \n",
-    "        IDF = math.log2(2000/term)\n",
+    "        IDF = math.log2(numberOfReviews/term)\n",
     "            \n",
     "        if IDF < 0:\n",
     "            print(eachWord)\n",
@@ -481,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -518,40 +541,40 @@
        "28      None\n",
        "29      None\n",
        "        ... \n",
-       "1970    None\n",
-       "1971    None\n",
-       "1972    None\n",
-       "1973    None\n",
-       "1974    None\n",
-       "1975    None\n",
-       "1976    None\n",
-       "1977    None\n",
-       "1978    None\n",
-       "1979    None\n",
-       "1980    None\n",
-       "1981    None\n",
-       "1982    None\n",
-       "1983    None\n",
-       "1984    None\n",
-       "1985    None\n",
-       "1986    None\n",
-       "1987    None\n",
-       "1988    None\n",
-       "1989    None\n",
-       "1990    None\n",
-       "1991    None\n",
-       "1992    None\n",
-       "1993    None\n",
-       "1994    None\n",
-       "1995    None\n",
-       "1996    None\n",
-       "1997    None\n",
-       "1998    None\n",
-       "1999    None\n",
-       "Length: 2000, dtype: object"
+       "7970    None\n",
+       "7971    None\n",
+       "7972    None\n",
+       "7973    None\n",
+       "7974    None\n",
+       "7975    None\n",
+       "7976    None\n",
+       "7977    None\n",
+       "7978    None\n",
+       "7979    None\n",
+       "7980    None\n",
+       "7981    None\n",
+       "7982    None\n",
+       "7983    None\n",
+       "7984    None\n",
+       "7985    None\n",
+       "7986    None\n",
+       "7987    None\n",
+       "7988    None\n",
+       "7989    None\n",
+       "7990    None\n",
+       "7991    None\n",
+       "7992    None\n",
+       "7993    None\n",
+       "7994    None\n",
+       "7995    None\n",
+       "7996    None\n",
+       "7997    None\n",
+       "7998    None\n",
+       "7999    None\n",
+       "Length: 8000, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,14 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,6 +606,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
