added VM and Graphs in 1 file and updated the bigram model

--- a/getBigramModel.ipynb
+++ b/getBigramModel.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "#read the data_set being used\n",
-    "data = pd.read_csv(\"Review_Subset.csv\")\n",
+    "data = pd.read_csv(\"Reviews_8000.csv\")\n",
     "\n",
     "#globals\n",
     "unigramDict = {}\n",
@@ -318,7 +318,7 @@
     "        if term == 0:\n",
     "            term = 1\n",
     "        \n",
-    "        IDF = math.log2(2000/term)\n",
+    "        IDF = math.log2(6400/term)\n",
     "        \n",
     "        rowVector[eachKey] = TF*IDF\n",
     "               \n",
