--- a/makeReviewSubset.ipynb
+++ b/makeReviewSubset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "#with resepect to the data\n",
     "numberofReviews = 5000\n",
     "proportionDict = {\n",
-    "    5: numberofReviews*.639,\n",
+    "    5:numberofReviews*.639,\n",
     "    4: int(numberofReviews*.142),\n",
     "    3: numberofReviews*.075,\n",
     "    2: numberofReviews*.052,\n",
@@ -25,7 +25,7 @@
     "    \n",
     "    5: numberofReviews*.2,\n",
     "    4: numberofReviews*.2,\n",
-    "    3: numberofReviews*.2,\n",
+    "    3: 0,\n",
     "    2: numberofReviews*.2,\n",
     "    1: numberofReviews*.2,\n",
     "    \n",
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{5: 1600.0, 4: 1600.0, 3: 1600.0, 2: 1600.0, 1: 1600.0}\n"
+      "{5: 1600.0, 4: 1600.0, 3: 0, 2: 1600.0, 1: 1600.0}\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "Length: 568454, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset_data = subset_data.sample(frac=1).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -171,69 +180,69 @@
      "output_type": "stream",
      "text": [
       "      score                                               text\n",
-      "0         5  I have bought several of the Vitality canned d...\n",
-      "1         1  Product arrived labeled as Jumbo Salted Peanut...\n",
-      "2         4  This is a confection that has been around a fe...\n",
-      "3         2  If you are looking for the secret ingredient i...\n",
-      "4         5  Great taffy at a great price.  There was a wid...\n",
-      "5         4  I got a wild hair for taffy and ordered this f...\n",
-      "6         5  This saltwater taffy had great flavors and was...\n",
-      "7         5  This taffy is so good.  It is very soft and ch...\n",
-      "8         5  Right now I'm mostly just sprouting this so my...\n",
-      "9         5  This is a very healthy dog food. Good for thei...\n",
-      "10        5  I don't know if it's the cactus or the tequila...\n",
-      "11        5  One of my boys needed to lose some weight and ...\n",
-      "12        1  My cats have been happily eating Felidae Plati...\n",
-      "13        4  good flavor! these came securely packed... the...\n",
-      "14        5  The Strawberry Twizzlers are my guilty pleasur...\n",
-      "15        5  My daughter loves twizzlers and this shipment ...\n",
-      "16        2  I love eating them and they are good for watch...\n",
-      "17        5  I am very satisfied with my Twizzler purchase....\n",
-      "18        5  Twizzlers, Strawberry my childhood favorite ca...\n",
-      "19        5  Candy was delivered very fast and was purchase...\n",
-      "20        5  My husband is a Twizzlers addict.  We've bough...\n",
-      "21        5  I bought these for my husband who is currently...\n",
-      "22        5  I can remember buying this candy as a kid and ...\n",
-      "23        5  I love this candy.  After weight watchers I ha...\n",
-      "24        5  I have lived out of the US for over 7 yrs now,...\n",
-      "25        5  Product received is as advertised.<br /><br />...\n",
-      "26        1  The candy is just red , No flavor . Just  plan...\n",
-      "27        4  I was so glad Amazon carried these batteries. ...\n",
-      "28        5  I got this for my Mum who is not diabetic but ...\n",
-      "29        5  I don't know if it's the cactus or the tequila...\n",
+      "0         4  We have been looking for pesto that tastes as ...\n",
+      "1         4  After buying these for quite sometime, I was q...\n",
+      "2         5  If you want to find a good flavor substitute f...\n",
+      "3         5  I'm from Detroit, and I was raised on Vernor's...\n",
+      "4         4  My husband likes these a lot. They are a bit d...\n",
+      "5         2  I was very disappointed by the product.  They ...\n",
+      "6         5  Long ago I discovered that San Marzano tomatoe...\n",
+      "7         2  They have some textured powder stuff on them t...\n",
+      "8         2  I have older mats that have a ribbed surface a...\n",
+      "9         5  This is a delicious tea!<br /><br />I'm just n...\n",
+      "10        4  These jelly beans are great for a party activi...\n",
+      "11        1  I was disappointed in the unpleasant flavor an...\n",
+      "12        1  Could not get the bags to \"pop\" any edible por...\n",
+      "13        1  The bread has a good taste but does not rise p...\n",
+      "14        5  I have been ordering the sea salt chips for ab...\n",
+      "15        4  One of the weaker flavored coffees but a yummy...\n",
+      "16        4  Progresso's chicken gumbo soup doesn't taste a...\n",
+      "17        4  When I'm working, I always carry my own lunch....\n",
+      "18        2  When Habanero is in powder form it doesn't tas...\n",
+      "19        5  <span class=\"tiny\"> Length:: 1:00 Mins<br /><b...\n",
+      "20        4  No sugar or anything added to the product. I h...\n",
+      "21        2  These taste really awful. I've tried plenty of...\n",
+      "22        2  I am a a vegetarian, and this is my least favo...\n",
+      "23        4  I was surprised how much raspberry flavor the ...\n",
+      "24        1  I've read the reviews and I agree that Yuban i...\n",
+      "25        2  I bought these cookies after reading all the r...\n",
+      "26        2  These pancakes are gross... they are pale and ...\n",
+      "27        5  The main ingredients in this dog food are so m...\n",
+      "28        2  These are very tasty, but way too sweet & suga...\n",
+      "29        5  I was really impressed with this.  There are m...\n",
       "...     ...                                                ...\n",
-      "7970      2  I have had good luck with Fee Brothers for oth...\n",
-      "7971      2  Ordered this to try some old school cocktails ...\n",
-      "7972      2  the chocolate goji berries taste better then t...\n",
-      "7973      2  Given the reputation of the pepper, this sauce...\n",
-      "7974      2  I bought this product thinking it was a gold s...\n",
-      "7975      2  I wasnt real thrilled with these, some were fi...\n",
-      "7976      2  I expected any canned stuffed grape leaves to ...\n",
-      "7977      2  The stuffed grape vine leaves were great. The ...\n",
-      "7978      2  I thought this would be a easy way to get a qu...\n",
-      "7979      2  I have drank Bigelow band peppermint tea and l...\n",
-      "7980      2  Wee bits is a great size kibble for small dogs...\n",
-      "7981      2  I am one of those people who like sweet lemon ...\n",
-      "7982      2  Based on the reviews I read here I was looking...\n",
-      "7983      2  I'd have given these four stars for flavor IF ...\n",
-      "7984      2  I first got introduced to StarKist Tuna Fillet...\n",
-      "7985      2  I got two of these for gifts at Christmas for ...\n",
-      "7986      2  I've used others that are better.  If you're n...\n",
-      "7987      2  The crackers were all broken up and in crumbs....\n",
-      "7988      2  Perhaps Arame seaweed is always bland and meal...\n",
-      "7989      2  I was not thrilled by the taste of this coffee...\n",
-      "7990      2  I agree the jerky is way too salty and it has ...\n",
-      "7991      2  i bought this item to get miso soup with less ...\n",
-      "7992      2  This _was_ my favorite chamomile tea, but they...\n",
-      "7993      2  Seeing the word \"tangy\" on the front of the bo...\n",
-      "7994      2  UPDATED REVIEW (10/7/2012):  I am disappointed...\n",
-      "7995      2  All five packages were too small, too old, and...\n",
-      "7996      2  I drink these drinks after a work out and they...\n",
-      "7997      2  I bought this honey substitute and a bottle of...\n",
-      "7998      2  I ordered Hershey's Milk Chocolate Bars and re...\n",
-      "7999      2  This coffee is equivalent to Pilon Gourmet Cof...\n",
+      "6370      1  PLEASE research, on the web! This product near...\n",
+      "6371      2  I bought this product thinking it was a gold s...\n",
+      "6372      1  Two of the three plants were dying and are now...\n",
+      "6373      2  Somehow my previous review got deleted. I live...\n",
+      "6374      5  Some reviewers must have a short memory. I've ...\n",
+      "6375      4  My kids have eaten oatmeal everyday since the ...\n",
+      "6376      4  This was a good buy. The variety is still clos...\n",
+      "6377      4  I was not expecting much from this tea. After ...\n",
+      "6378      5  What a nice alternative to an apple pie. Love ...\n",
+      "6379      5  These are the most fantastic chips I've ever h...\n",
+      "6380      1  Someone at work cooked these and the smell is ...\n",
+      "6381      1  As coffee in general, this Wolfgang variety wa...\n",
+      "6382      1  After I enptied the can, I noticed it was blac...\n",
+      "6383      1  Instead of a black graduation cap, a top hat w...\n",
+      "6384      1  Made in China, does anything else need to be s...\n",
+      "6385      5  No more heavy grocery bags for me -- I've just...\n",
+      "6386      2  In the past I have bought my syrup from World ...\n",
+      "6387      5  I subscribed to these - one case every three m...\n",
+      "6388      1  I have been told by my veternarian that Glucos...\n",
+      "6389      4  This popcorn leaves very few old maids. It's f...\n",
+      "6390      1  Just about 9 out of 10 of these would not work...\n",
+      "6391      2  It is okay.  I would not go out of my way to b...\n",
+      "6392      5  I love Popchips. They may take some time getti...\n",
+      "6393      4  Wellness Pure Delights are very tasty, moist a...\n",
+      "6394      2  I have bought several Revolution flavored teas...\n",
+      "6395      5  I love San Marzano tomatoes and Cento's are gr...\n",
+      "6396      2  I've been using this cereal for the past 4-5 m...\n",
+      "6397      1  Three of us tried it; one of us was barely abl...\n",
+      "6398      4  Well worth the money. I did the calculations o...\n",
+      "6399      4  This soup is pretty good, not great! I put som...\n",
       "\n",
-      "[8000 rows x 2 columns]\n"
+      "[6400 rows x 2 columns]\n"
      ]
     }
    ],
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
